$HeadURL$

2006-11-17 Michal Čihař  <michal@cihar.com>
    * sql.php, libraries/display_tbl.lib.php: Force pos to be integer to avoid
      XSS.
    * navigation.php: Fix XSS on table comment.
    * index.php, libraries/cleanup.lib.php, libraries/url_generating.lib.php,
      libraries/common.lib.php, libraries/select_lang.lib.php: Fix path
      disclossure while passing array as some params.

2006-11-16 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd_pdf.php: export coordinates to PDF page even if the tables
      were not defined on this PDF page

2006-11-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: verify the presence of designer_coords

2006-11-13 Michal Čihař  <michal@cihar.com>
    * server_status.php: Check for divison by zero (bug #1594460).
    * db_operations.php: Change information about not configured pmadb to
      notice (bug #1589294).
    * scripts/setup.php: Configure also designer table.

2006-11-12 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd_get_info.php: avoid error if no index defined for a table

2006-11-11 Michal Čihař  <michal@cihar.com>
    * lang/czech: Update.

2006-11-11 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd_general.php, pmd_get_info.php, pmd/scripts/move.js, lang/*:
      in InnoDB, it's allowed to create a relation even if it's not on 
      a primary key, so display the InnoDB-related options (ON UPDATE,
      ON CASCADE)

2006-11-10 Michal Čihař  <michal@cihar.com>
    * lang/czech: Translate designer.
    * config.sample.inc.php: Comment out pmadb and controluser to avoid
      confusion when they are not properly created.

2006-11-09 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.9.1 released from MAINT_2_9_1

2006-11-07 Michal Čihař  <michal@cihar.com>
    * lang/czech: Translate designer.

2006-11-07 Marc Delisle  <lem9@users.sourceforge.net>
    * (many files) new Designer feature, thanks to Ivan A Kirillov

2006-11-03 Michal Čihař  <michal@cihar.com>